Ingress/azure-http-proxy-with-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.2f1b3035-c644-42cb-8f36-fcdf8690e7a4.centralus.aksapp.io
    http:
      paths:
      - path: "/"
        backend:
          serviceName: aks-helloworld
          servicePort: 80
      - path: "/hello"
        backend:
          serviceName: ingress-demo
          servicePort: 80
