Ingress/simpleIngress.yml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.denicolafamily.com
    http:
     paths:
     - backend:
        serviceName: nginx
        servicePort: 80
       path: /app 
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80  
  selector:
    app: nginx

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: echoserver
        image: nginx
        ports:
        - containerPort: 80
